<resources>
    <string name="app_name">QupaiCustomUiDemo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="qupai_function_message">请选择拍摄类型</string>
    <string name="qupai_live">直播</string>
    <string name="qupai_video">视频</string>
    <string name="qupai_photo">照片</string>

    <string name="permissions_tips_camera_audio">开启权限后，才能正常拍摄</string>
    <string name="permissions_tips_storage">开启权限后，才能正常导入视频</string>

    <string name="qupai_no_sdcard_exit">SD卡不可用,不能录制</string>
    <string name="qupai_no_sdcard_exit_photo">SD卡不可用,不能拍照</string>
    <string name="qupai_transcode_in_progress">请稍等 &#8230;</string>
    <string name="qupai_diy_text_edit_completed">完成</string>
    <string name="qupai_download_paster_all">动图还未下载,是否立即\n下载整套动图？</string>
    <string name="qupai_download_paster_goahead">该动图未完成下载\n是否继续下载</string>
    <string name="qupai_video_recorder_tip_before_start_1">按住</string>
    <string name="qupai_video_recorder_tip_before_start_2">拍摄按钮进行拍摄</string>
    <string name="qupai_video_recorder_tip_progress_1">松开</string>
    <string name="qupai_video_recorder_tip_progress_2">可暂停</string>
    <string name="qupai_video_recorder_tip_recording_1">可录制</string>
    <string name="qupai_video_recorder_tip_recording_2">%1$d至%2$d秒</string>
    <string name="qupai_video_recorder_tip_recording_3">时长的视频</string>
    <string name="qupai_video_recorder_tip_first_stop_1">换个场景，</string>
    <string name="qupai_video_recorder_tip_first_stop_2">按住</string>
    <string name="qupai_video_recorder_tip_first_stop_3">继续拍摄</string>
    <string name="qupai_video_recorder_tip_stop_1">继续</string>
    <string name="qupai_video_recorder_tip_stop_2">拍摄</string>
    <string name="qupai_video_recorder_tip_stop_3">或点击</string>
    <string name="qupai_video_recorder_tip_stop_4">预览</string>
    <string name="toast_qupai_project_auto_save">已自动保存至草稿箱</string>
    <string name="qupai_dlg_button_yes">是</string>
    <string name="qupai_dlg_button_no">否</string>
    <string name="qupai_dlg_record_abandon_message">要重新拍摄吗？</string>
    <string name="qupai_dlg_record_abandon_quit">放弃拍摄</string>
    <string name="qupai_dlg_record_abandon_reset">重新拍摄</string>
    <string name="qupai_download_failed_goon">网络不给力，请检查网络</string>
    <string name="qupai_downloading_waiting">正在下载，请稍后</string>
    <string name="qupai_loading_font_waiting">正在下载字体</string>
    <string name="qupai_decompress_waiting">下载完成，正在安装</string>
    <string name="qupai_downloading">下载中</string>
    <string name="qupai_install_font">正在安装字体</string>
    <string name="qupai_diy_font_color">颜色</string>
    <string name="qupai_diy_font_typeface">字体</string>
    <string name="qupai_diy_font_keyboard">键盘</string>
    <string name="resource_manager">管理</string>
    <string name="download_imv_more">更多iMV</string>
    <string name="music_manager_no_data">你还没有下载音乐</string>
    <string name="overlay_manager_no_data">你还没有下载动图</string>
    <string name="font_manager_no_data">你还没有下载字体</string>
    <string name="caption_manager_no_data">你还没有下载字幕</string>
    <string name="imv_manager_no_data">你还没有下载iMV</string>

    <string name="delete">删除</string>
    <string name="all_select">全选</string>
    <string name="all_unselect">取消全选</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_failed">删除失败</string>
    <string name="face_and_music_manager_edit">编辑</string>
    <string name="paster_manager_sort">排序</string>
    <string name="face_and_music_manager">特效管理</string>
    <string name="action_finish">完成</string>
    <string name="setting_feedback_send">发送</string>

    <string name="qupai_gallery_activity_title">导入</string>
    <string name="qupai_import_video_guide">从相册中选一个\n你的精彩视频</string>
    <string name="qupai_gallery_tab_title_draft">草稿</string>
    <string name="qupai_gallery_tab_title_import_video">本地视频</string>
    <string name="qupai_gallery_tab_title_import_photo">本地图片</string>
    <string name="qupai_nodraft">你还没有保存过草稿</string>
    <string name="qupai_novideo">你还没有本地视频</string>
    <string name="qupai_sure_delete_draft">确定要删除草稿吗？</string>
    <string name="qupai_sure_delete_current_video">确定要删除本视频吗？</string>
    <string name="qupai_sure_delete_current_photo">确定要删除本照片吗？</string>
    <string name="qupai_dlg_record_quit_save">要保存草稿修改吗？</string>
    <string name="qupai_file_can_not_delete">该视频无法删除</string>
    <string name="qupai_text_count_outof">你输入的字数已经超过了限制!</string>
    <string name="qupai_dlg_editor_quit_message">要保存到草稿箱吗？</string>
    <string name="need_download_special_font">该动图使用我们推荐的字体效果更佳</string>
    <string name="recommend_to_weixin_for_unlock_font">推荐趣拍到微信朋友圈即可解锁该字体</string>
    <string name="recommend_to_weixin_for_unlock_paster">推荐趣拍到微信朋友圈即可解锁该套动图</string>
    <string name="qupai_dlg_button_cancel">取消</string>
    <string name="qupai_dlg_button_ok">确认</string>
    <string name="qupai_camera_permission">设置</string>
    <string name="qupai_message_camera_acquisition_failure">无法启动短视频，请确认相机是否被其他程序占用或权限未开</string>
    <string name="qupai_message_storge_acquisition_failure">无法启动导入界面，请确认读写权限是否开启</string>
    <string name="qupai_message_no_memory_failure">手机存储空间不足，暂时无法录制</string>
    <string name="qupai_video_edit_activity_title">编辑视频</string>
    <string name="qupai_btn_text_download_music">更多音乐</string>
    <string name="qupai_btn_text_download_mv">更多iMV</string>
    <string name="qupai_btn_text_download_caption">更多字幕</string>
    <string name="qupai_btn_text_download_overlay">更多动图</string>
    <string name="qupai_btn_text_download_font">更多字体</string>
    <string name="qupai_sound_mixer_effect_none">原音</string>
    <string name="qupai_change_diyoverlay_group">换一换</string>
    <string name="qupai_download_diyoverlay_group">整套下载</string>
    <string name="qupai_unlock_diyoverlay_group">立即解锁</string>
    <string name="qupai_download_immediately">立即下载</string>
    <string name="qupai_download_cancel">暂不下载</string>
    <string name="qupai_recommend_cancel">暂不推荐</string>
    <string name="qupai_recommend_immediately">立即推荐</string>
    <string name="qupai_paster_download_success">下载成功</string>
    <string name="qupai_paster_download_first_success">下载成功，你可以前往设置-视频特效管理中管理特效</string>
    <string name="qupai_import_empty_message">你还没有本地视频</string>
    <string name="qupai_video_album_list">相册</string>
    <string name="qupai_download_goon">继续</string>
    <string name="qupai_video_trim">裁剪</string>
    <string name="qupai_video_trim_tips">拖动剪刀或缩略图裁剪视频</string>
    <string name="qupai_import_toast">仅支持小于10分钟的视频</string>
    <string name="qupai_trim_guide_drag">移动选取最佳画面</string>
    <string name="qupai_trim_guide_drag_thumbnail">拖动手柄或视频缩略图，调整剪裁时间</string>
    <string name="qupai_trim_open_video_failed">无法打开视频文件</string>
    <string name="qupai_trim_video_failed">无法导入视频文件</string>
    <string name="qupai_photo_decode_failed">无法解析照片文件</string>
    <string name="qupai_no_video_file">视频文件不存在</string>
    <string name="qupai_no_photo_file">照片文件不存在</string>
    <string name="qupai_ve_none">原片</string>
    <string name="qupai_project_saved_toast">已保存到草稿箱</string>
    <string name="qupai_video_recorder_tip_import">可以导入本地视频啦</string>
    <string name="qupai_video_recorder_tip_save_completion">视频保存在这里哟</string>
    <string name="qupai_video_recorder_tip_first_delete">点击这里可删除\n不满意的片段</string>
    <string name="qupai_video_recorder_tip_confirm_delete">再次点击将删除\n最后一段视频</string>
    <string name="qupai_effect_animation_overlay">动图</string>
    <string name="qupai_video_cover">封面</string>
    <string name="qupai_effect_filter">滤镜</string>
    <string name="qupai_effect_paster">贴纸</string>
    <string name="qupai_effect_mv">iMV</string>
    <string name="qupai_effect_caption">文字</string>
    <string name="qupai_effect_audio_mix">配乐</string>
    <string name="qupai_effect_text_stroke">描边</string>
    <string name="qupai_effect_text_color">纯色</string>
    <string name="qupai_back">返回</string>

    <string name="qupai_audio_mix_track_main">原音</string>
    <string name="qupai_audio_mix_track_music">音乐</string>
    <string name="qupai_audio_mix_track_dubbing">配音</string>

    <string name="qupai_beautyskin">美颜</string>
    <string name="qupai_skinlevelprocess">80%</string>
    <string name="qupai_beautyskin_open">已开启美颜功能</string>
    <string name="qupai_beautyskin_close">已关闭美颜功能</string>
    <string name="qupai_diy_guide_tip_preview">点击这里可进行\n及时预览</string>
    <string name="qupai_diy_guide_tip_video">拖动调整位置</string>
    <string name="qupai_diy_guide_tip_timeline">拖动这里可调整动图\n起始画面和时长呦</string>
    <string name="qupai_overlay_guide_tip_manage">可以对动图进行管理和排序</string>
    <string name="qupai_diy_guide_tip_batch">一大波动图\n正在逼近</string>
    <string name="qupai_camera_zoom_indicator">×%01.1f</string>
    <string name="qupai_diy_locked_remark">使用其他效果发布视频并</string>
    <string name="qupai_diy_locked_sms">微信</string>
    <string name="qupai_diy_locked_share">分享给</string>
    <string name="qupai_diy_locked_three">3个好友</string>
    <string name="qupai_diy_locked_sucai">即可解锁整套Myoo动图</string>
    <string name="qupai_imv">使用其他特效发布视频并分享到朋友圈，即可解锁3个iMV</string>
    <string name="qupai_imv_locked_remark">使用其他特效发布视频并分享到\r\n</string>
    <string name="qupai_imv_locked_wx">微信朋友圈</string>
    <string name="qupai_imv_locked_free">，即可解锁</string>
    <string name="qupai_imv_locked_unlock">3个iMV</string>
    <string name="qupai_toast_asset_download_failure">下载失败！</string>
    <string name="qupai_video_recorder_tip_beauty_skin">拥有神奇效果的美颜功能</string>

    <string name="qupai_recorder_timeline_time_format">%.1f秒</string>
    <string name="qupai_recorder_know">知道了</string>
    <string name="qupai_dubbing_title">配音</string>

    <string name="tip_qupai_self_timer_countdown">5秒后将开始自动拍摄</string>
    <string name="tip_qupai_self_timer_countdown_cancel_1">点击</string>
    <string name="tip_qupai_self_timer_countdown_cancel_2">退出倒计时</string>

    <string name="dlg_message_qupai_confirm_start_dubbing">是否要重新配音</string>
    <string name="dlg_message_qupai_confirm_use_music">确认放弃配音，使用音乐吗？</string>
    <string name="dlg_message_qupai_confirm_use_mv">若改用其他MV，将清除当前配音</string>

    <string name="qupai_mv_used">使用</string>
    <string name="slow_network">网络不给力</string>
    <string name="music_download_failed">下载失败</string>
    <string name="qupai_cancel">取消</string>

    <string name="music_download_sample">音乐下载示例</string>
    <string name="music_download">下载</string>
    <string name="music_used">使用</string>

    <string name="click_for_paster_sort">点击对动图进行排序</string>
    <string name="long_click_for_drag">长按按钮后进行拖动</string>
    <string name="powered_text"></string>

    <string name="qupai_recorder_face_appear_tip">已检测到人脸，添加表情动图更方便</string>
    <string name="qupai_recorder_gallery_tip_ok">好的</string>
    <string name="qupai_dlg_button_confirm">确定</string>

    <string name="qupai_simple_workspace_dir">custom_ui_demo</string>
    <string name="go_editor">去编辑</string>
    <string name="add_bg_music">添加背景音乐</string>
    <string name="add_filter">添加滤镜</string>
    <string name="original_volume">原音消除</string>
    <string name="save">保存</string>
    <string name="editor_launcher_video_input_hint">点击选择一个视频导入</string>
    <string name="auth_tips">请务必保证鉴权成功再调用录制，建议在应用登录时调用鉴权</string>
    <string name="photo_fade">图片合成视频</string>

    <string name="qupai_license_needbug">增值服务不可用，可联系商务购买</string>
    <string name="qupai_effect_mv_nosuppport">对不起，您所选择的MV不支持本视频</string>

</resources>
