<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:keepScreenOn="true"
    tools:context="com.duanqu.qupaicustomuidemo.editor.EditorActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/qupai_action_bar_size_edit"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.ActionButton.Qupai.Recorder"
            android:layout_gravity="center_vertical|left"
            android:layout_marginLeft="20dp"
            android:contentDescription="@null"
            android:src="@drawable/btn_qupai_arrow_left_white" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guide_switch"
            android:visibility="gone"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginLeft="60dp"
            android:src="@drawable/balloon_qupai_image"/>

        <ImageView
            android:id="@+id/btn_next"
            style="@style/Widget.ActionButton.Qupai.Recorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="20dp"
            android:contentDescription="@null"
            android:src="@drawable/theme_default_qupai_btn_next_step_arrow" />

    </FrameLayout>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/drafts_action_line" />



    <com.duanqu.qupai.android.widget.AspectRatioLayout
        android:id="@+id/video"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <SurfaceView
            android:id="@+id/surface_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginBottom="9dp"
            android:layout_marginRight="9dp"
            android:text="静音"
            android:id="@+id/silence"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@id/dynamic_overlay_layout"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/preview"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="9dp"
                android:layout_marginLeft="9dp"
                android:scaleType="fitXY"
                android:src="@drawable/edit_diyoverlay_qupai_preview_selector" />

            <include
                android:id="@+id/audio_mix_weight_control"
                layout="@layout/qupai_audio_mixer_slider"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_gravity="bottom" />
        </LinearLayout>
    </com.duanqu.qupai.android.widget.AspectRatioLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@id/dynamic_timeline_layout"
        android:background="@color/qupai_black_opacity_70pct">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/timeline_nav_layout">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/timeline_nav"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <View
                android:layout_width="4dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:id="@+id/indicator"
                android:background="@android:color/holo_red_light"/>

        </FrameLayout>

    </FrameLayout>


    <FrameLayout
        android:id="@+id/effect_chooser_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        android:background="@color/qupai_gray_0xd4">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/effect_paster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"/>


        <FrameLayout
            android:id="@+id/effect_audio_mix"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"/>



        <android.support.v7.widget.RecyclerView
            android:id="@+id/effect_list_caption"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/effect_video_cover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"/>

    </FrameLayout>
    <LinearLayout
        android:id="@+id/tab_group_effect_chooser"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        style="@style/Qupai.Widget.RadioButton.EffectChooser"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/tab_effect_paster"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/Qupai.Widget.RadioButton.EffectChooser"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bg_tab_effect_paster" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/editorRecordVideoTabTxt"
                android:text="@string/qupai_effect_paster" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/tab_effect_audio_mix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/Qupai.Widget.RadioButton.EffectChooser"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bg_tab_effect_audio_mix" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/editorRecordVideoTabTxt"
                android:text="@string/qupai_effect_audio_mix" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_effect_caption"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/Qupai.Widget.RadioButton.EffectChooser"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bg_tab_effect_caption" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/editorRecordVideoTabTxt"
                android:text="@string/qupai_effect_caption" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/tab_video_cover"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/Qupai.Widget.RadioButton.EffectChooser"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bg_tab_effect_cover" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/editorRecordVideoTabTxt"
                android:text="@string/qupai_video_cover" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>